Update project configuration and dependencies to enhance development experience and support React integration. Changes include adding React and React DOM types, updating build scripts to use Webpack, and modifying TypeScript configuration for JSX support. Additionally, static file serving is improved in the server setup.

--- a/public/index.html
+++ b/public/index.html
@@ -105,129 +105,7 @@
     </style>
   </head>
   <body>
-    <div class="container">
-      <div class="chat-container">
-        <div class="chat-header">PH Observability Chatbot</div>
-        <div class="chat-messages" id="chatMessages">
-          <div class="message bot-message">
-            Hello! I'm your retail assistant. How can I help you today?
-          </div>
-        </div>
-        <div class="status-bar">
-          <span id="statusText">Connected</span>
-          <span
-            id="loadingIndicator"
-            class="loading"
-            style="display: none"
-          ></span>
-        </div>
-        <div class="chat-input">
-          <form id="chatForm">
-            <input
-              type="text"
-              id="messageInput"
-              placeholder="Type your message..."
-              autocomplete="off"
-            />
-            <button type="submit" class="btn btn-primary">Send</button>
-          </form>
-        </div>
-      </div>
-    </div>
-
-    <script>
-      // DOM elements
-      const chatForm = document.getElementById("chatForm");
-      const messageInput = document.getElementById("messageInput");
-      const chatMessages = document.getElementById("chatMessages");
-      const statusText = document.getElementById("statusText");
-      const loadingIndicator = document.getElementById("loadingIndicator");
-
-      // Conversation state
-      let conversationId = null;
-
-      // Handle form submission
-      chatForm.addEventListener("submit", async (e) => {
-        e.preventDefault();
-
-        const message = messageInput.value.trim();
-        if (!message) return;
-
-        // Clear input
-        messageInput.value = "";
-
-        // Add user message to UI
-        addMessage(message, "user");
-
-        // Show loading state
-        statusText.textContent = "Thinking...";
-        loadingIndicator.style.display = "inline-block";
-
-        try {
-          // Send message to API
-          const response = await sendMessage(message);
-
-          // Add bot response to UI
-          addMessage(response.response, "bot");
-
-          // Update conversation ID for future messages
-          conversationId = response.conversationId;
-
-          // Update status
-          statusText.textContent = "Connected";
-        } catch (error) {
-          console.error("Error sending message:", error);
-
-          // Show error in UI
-          addMessage("Sorry, I encountered an error. Please try again.", "bot");
-
-          // Update status
-          statusText.textContent = "Error occurred";
-        } finally {
-          // Hide loading indicator
-          loadingIndicator.style.display = "none";
-        }
-      });
-
-      // Add a message to the chat UI
-      function addMessage(text, sender) {
-        const messageElement = document.createElement("div");
-        messageElement.classList.add("message");
-        messageElement.classList.add(
-          sender === "user" ? "user-message" : "bot-message"
-        );
-        messageElement.textContent = text;
-
-        chatMessages.appendChild(messageElement);
-
-        // Scroll to bottom
-        chatMessages.scrollTop = chatMessages.scrollHeight;
-      }
-
-      // Send message to the API
-      async function sendMessage(message) {
-        // In a real application, you would retrieve and use a JWT token for authentication
-        // For demo purposes, we're sending without authentication
-        const payload = {
-          message,
-          ...(conversationId && { conversationId }),
-        };
-
-        const response = await fetch("/api/chatbot/chat", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-            // In a real application: 'Authorization': `Bearer ${token}`
-          },
-          body: JSON.stringify(payload),
-        });
-
-        if (!response.ok) {
-          throw new Error(`API error: ${response.status}`);
-        }
-
-        return await response.json();
-      }
-    </script>
+    <div id="root"></div>
+    <script src="/static/bundle.js"></script>
   </body>
 </html>
